--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+     <img src="https://via.placeholder.com/150">
+      <img src="https://via.placeholder.com/150" alt="A placeholder image">
+          <img src="https://via.placeholder.com/150" alt="Another placeholder image" title="This is a placeholder image"> 
   </body>
 </html>
